# emergent-lands

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  STATUS.md  alembic.ini  docker-compose.yaml  pyproject.toml
agents/: anchor.yaml  anchor_tools.py  flora.yaml  flora_tools.py  genome.yaml  genome_tools.py  mira.yaml  mira_tools.py  spark.yaml  spark_tools.py
alembic/: env.py
alembic/versions/: 1238462fe568_initial_schema.py  b3722531725d_fix_agent_turns_unique_constraint_to_.py
config/landmarks/: town_hall.yaml  victory_arch.yaml
config/worlds/: duo.yaml  mvp.yaml
docs/: 2026-05-22-emergent-lands-design.md
emergent/agents/: memory.py  profiles.py  state.py
emergent/cli/: run.py
emergent/db/: __init__.py  connection.py  models.py
emergent/engine/: __init__.py  context.py  economy.py  governance.py  metrics.py  orchestrator.py  reactions.py
emergent/models/: __init__.py  base.py  openai_provider.py  router.py
emergent/tools/: base.py  core.py  registry.py
emergent/world/: __init__.py  config.py
tests/: conftest.py  test_agent_memory.py  test_agent_profiles.py  test_agent_state.py  test_agent_tools.py  test_cli.py  test_context.py  test_core_tools.py  test_db_connection.py  test_economy.py  test_governance.py  test_integration.py  test_llm_base.py  test_location_economy.py  test_location_governance.py  test_location_other.py  test_metrics.py  test_models.py  test_openai_provider.py  test_orchestrator.py  test_provider_router.py  test_reactions.py  test_tool_base.py  test_tool_registry.py  test_world_config.py
(+8 files in other folders)
